packages/backpack-web/src/bpk-component-inset-banner/src/BpkInsetBannerV2/BpkInsetBannerSponsored.module.scss
/*
 * Backpack - Skyscanner's Design System
 *
 * Copyright 2016 Skyscanner Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@use '../../../bpk-mixins/tokens';
@use '../../../bpk-mixins/breakpoints';
@use '../../../bpk-mixins/utils';

.bpk-inset-banner {
  display: grid;
  padding: tokens.bpk-spacing-md() tokens.bpk-spacing-base();
  grid-template-columns: auto 1fr auto;
  grid-template-areas: 'logo content cta';
  align-items: center;
  border-radius: tokens.$bpk-border-radius-sm;

  @include breakpoints.bpk-breakpoint-mobile {
    grid-template-columns: 1fr auto;
    grid-template-areas:
      'logo cta'
      'content content';
  }

  &--logo {
    height: 100%;
    grid-area: logo;

    @include breakpoints.bpk-breakpoint-above-mobile {
      display: flex;
      align-items: center;
    }
  }

  &--with-image {
    border-radius: tokens.$bpk-border-radius-sm tokens.$bpk-border-radius-sm 0 0;
  }

  &--on-light {
    color: tokens.$bpk-text-on-light-day;
    fill: tokens.$bpk-text-on-light-day;
  }

  &--on-dark {
    color: tokens.$bpk-text-on-dark-day;
    fill: tokens.$bpk-text-on-dark-day;
  }

  &--image {
    max-height: tokens.$bpk-icon-size-lg;
    object-fit: contain;
    padding-inline-end: tokens.bpk-spacing-base();
  }

  &--text-container {
    display: flex;
    grid-area: content;
    flex-direction: column;
    word-wrap: break-word;
  }

  &--cta-text {
    display: flex;
    align-items: center;
  }

  &--cta-button {
    all: unset;

    &:focus-visible {
      @include utils.bpk-focus-indicator;
    }
  }

  &--cta-container {
    display: flex;
    height: 100%;
    grid-area: cta;
    cursor: pointer;

    @include breakpoints.bpk-breakpoint-mobile {
      align-items: flex-start;
    }
  }

  &--cta-content {
    display: flex;
    align-items: center;
  }

  &--cta-info-icon {
    display: flex;
    align-items: center;
    margin-inline-start: tokens.bpk-spacing-md();
  }

  &--bottom-sheet-content {
    display: flex;
    padding-bottom: tokens.bpk-spacing-lg();
    flex-direction: row;
  }

  &--bottom-sheet-text {
    display: flex;
    flex-direction: column;
  }

  &--bottom-sheet-title {
    margin-bottom: tokens.bpk-spacing-sm();
    color: tokens.$bpk-text-on-light-day;
  }

  &--bottom-sheet-description {
    color: tokens.$bpk-text-on-light-day;
  }
}

.bpk-inset-banner-image-container {
  min-height: tokens.$bpk-line-height-8-xl;
  border-radius: 0 0 tokens.$bpk-border-radius-sm tokens.$bpk-border-radius-sm;
  overflow: hidden;
}

